login and registration complete (v1)

--- a/erroLogin.html
+++ b/erroLogin.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
-    <title>Erro Cadastro</title>
+    <title>Erro Login</title>
 </head>
 
 <body>
@@ -27,8 +27,8 @@
 
     <!-- Message error -->
     <div class="container.fluid">
-        <h5 class="center">Ocorreu um erro ao você se cadastrar !!</h5>
-        <h6 class="center">Seu e-mail já está cadastrado no sistema.</h6>
+        <h5 class="center">Ocorreu um erro ao você acessar sua conta !!</h5>
+        <h6 class="center">Seu e-mail ou sua senha está incorreta.</h6>
         <center>
             <br>
             <a href="index.html">
