--- a/sucessCadastro.html
+++ b/sucessCadastro.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
-    <title>Erro Cadastro</title>
+    <title>Sucesso Cadastro</title>
 </head>
 
 <body>
@@ -25,20 +25,20 @@
         </nav>
     </div>
 
-    <!-- Message error -->
+    <!-- Message Sucess -->
     <div class="container.fluid">
-        <h5 class="center">Ocorreu um erro ao você se cadastrar !!</h5>
-        <h6 class="center">Seu e-mail já está cadastrado no sistema.</h6>
+        <h5 class="center">Você foi cadastrado com sucesso !</h5>
+        <h6 class="center">Volte para pagina inical e acesse sua conta.</h6>
         <center>
             <br>
             <a href="index.html">
-                <button class="btn purple darken-1 waves-effect waves-light">Voltar ao Início
+                <button class="btn blue darken-3 waves-effect waves-light">Voltar ao Início
                     <i class="material-icons right">home</i>
                 </button>
             </a>
             <br><br>
             <div>
-                <img class="responsive-img" src="Img/page_error.svg" width="500" alt="page erro img fail">
+                <img class="responsive-img" src="Img/done.svg" width="500" alt="done img fail">
             </div>
         </center>
 
