--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                     onSubmit="return valida_dados(this)">
                     <div class="row">
                         <div class="input-field col s6">
-                            <input id="email" type="email" class="validate">
+                            <input id="email" type="email" class="validate" name="emailLogin">
                             <label for="email">Email</label>
                         </div>
                         <div class="input-field col s6">
-                            <input id="password" type="password" class="validate">
+                            <input id="password" type="password" class="validate" name="senhaLogin">
                             <label for="password">Senha</label>
                         </div>
                     </div>
