--- a/contato.html
+++ b/contato.html
@@ -131,11 +131,11 @@
         <div class="center">
             <div class="row">
                 <div class="col s6 l6">
-                    <a href="mailto:contatoorganizaestudo@gmail.com"><img src="Img/iconEmail.png" width="60"> </a>
+                    <a href="mailto:lucas196078@gmail.com"><img src="Img/iconEmail.png" width="60"> </a>
                     <p>E-mail</p>
                 </div>
                 <div class="col s6 l6">
-                    <a href="https://github.com/Luuck4s" target="blank"><img src="Img/iconGit.png" width="60"></a>
+                    <a href="https://github.com/Luuck4s/Save-Money" target="blank"><img src="Img/iconGit.png" width="60"></a>
                     <p>GitHub</p>
                 </div>
             </div>
