--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
                         alt="img logo navbar"></a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a class="waves-effect waves-light modal-trigger" href="#cadastro">Cadastrar</a></li>
-                    <li><a class="waves-effect waves-light modal-trigger" href="#login">Acessar sua conta</a></li>
-
+                    <li><a class="waves-effect waves-light modal-trigger" href="#cadastro">Cadastrar<i class="material-icons right">add_box</i></a></li>
+                    <li><a class="waves-effect waves-light modal-trigger" href="#login">Acessar sua conta<i class="material-icons right">account_circle</i></a></li>
                 </ul>
             </div>
         </nav>
@@ -41,7 +40,7 @@
         <div class="modal-content">
             <div class="row">
                 <div class="center">
-                    <i class="medium material-icons">account_box</i>
+                    <i class="medium material-icons">add_box</i>
                 </div>
                 <form class="col s12" action="cadastro.php" method="POST" name="formularioCadastro"
                     onSubmit="return valida_dados(this)">
