--- a/erroGenerics.html
+++ b/erroGenerics.html
@@ -20,7 +20,7 @@
     <div>
         <nav>
             <div class="nav-wrapper">
-                <a href="index.html" class="brand-logo center"><img class="logoNavbar" src="Img/icone.png" alt="img logo navbar"></a>
+                <a href="index.php" class="brand-logo center"><img class="logoNavbar" src="Img/icone.png" alt="img logo navbar"></a>
             </div>
         </nav>
     </div>
@@ -30,7 +30,7 @@
         <h5 class="center">Ocorreu um erro, você não está logado.</h5>
         <center>
             <br>
-            <a href="index.html">
+            <a href="index.php">
                 <button class="btn purple darken-1 waves-effect waves-light">Voltar ao Início
                     <i class="material-icons right">home</i>
                 </button>
