--- a/erroLogin.html
+++ b/erroLogin.html
@@ -20,7 +20,7 @@
     <div>
         <nav>
             <div class="nav-wrapper">
-                <a href="index.html" class="brand-logo center"><img class="logoNavbar" src="Img/icone.png" alt="img logo navbar"></a>
+                <a href="index.php" class="brand-logo center"><img class="logoNavbar" src="Img/icone.png" alt="img logo navbar"></a>
             </div>
         </nav>
     </div>
@@ -31,7 +31,7 @@
         <h6 class="center">Seu e-mail ou sua senha está incorreta.</h6>
         <center>
             <br>
-            <a href="index.html">
+            <a href="index.php">
                 <button class="btn purple darken-1 waves-effect waves-light">Voltar ao Início
                     <i class="material-icons right">home</i>
                 </button>
