Alteração navbar e desing

--- a/contato.html
+++ b/contato.html
@@ -14,6 +14,7 @@
     <script src="js/init.js"></script>
     <title>Save Money</title>
 </head>
+
 <body>
     <!--NavBar-->
     <div>
@@ -60,7 +61,8 @@
                     <p>E-mail</p>
                 </div>
                 <div class="col s6 l6">
-                    <a href="https://github.com/Luuck4s/Save-Money" target="blank"><img src="Img/iconGit.png" width="60"></a>
+                    <a href="https://github.com/Luuck4s/Save-Money" target="blank"><img src="Img/iconGit.png"
+                            width="60"></a>
                     <p>GitHub</p>
                 </div>
             </div>
@@ -96,11 +98,12 @@
         $(document).ready(function () {
             $('.slider').slider({ full_width: true });
         });
-        
+
         //Material Box
         $(document).ready(function () {
             $('.materialboxed').materialbox();
         });
     </script>
 </body>
+
 </html>
