indentação comeco feito

--- a/sucessCadastro.html
+++ b/sucessCadastro.html
@@ -20,7 +20,9 @@
     <div>
         <nav>
             <div class="nav-wrapper">
-                <a href="index.php" class="brand-logo center"><img class="logoNavbar" src="Img/icone.png" alt="img logo navbar"></a>
+                <a href="index.php" class="brand-logo center">
+                    <img class="logoNavbar" src="Img/icone.png" alt="img logo navbar">
+                </a>
             </div>
         </nav>
     </div>
@@ -41,7 +43,6 @@
                 <img class="responsive-img" src="Img/done.svg" width="500" alt="done img fail">
             </div>
         </center>
-
     </div>
 </body>
 </html>
