erro de grafico concertado

--- a/contato.html
+++ b/contato.html
@@ -50,8 +50,8 @@
                 <li>
                     <img src="Img/elements.svg" alt="elements fail"> <!-- random image -->
                     <div class="caption right-align">
-                        <h3>Sua opinião é muito importante</h3>
-                        <h5 class="light grey-text text-lighten-3">Envie-nos uma sugestão, dica ou
+                        <h3 class="black-text">Sua opinião é muito importante</h3>
+                        <h5 class="black-text">Envie-nos uma sugestão, dica ou
                             reclamação.</h5>
                     </div>
                 </li>
