navbar desing modificado

--- a/sucessCadastro.html
+++ b/sucessCadastro.html
@@ -32,7 +32,7 @@
         <h5 class="center">Você foi cadastrado com sucesso !</h5>
         <h6 class="center">Volte para pagina inical e acesse sua conta.</h6>
         <center>
-            <br>
+            <br><br>
             <a href="index.php">
                 <button class="btn blue darken-3 waves-effect waves-light">Voltar ao Início
                     <i class="material-icons right">home</i>
@@ -44,5 +44,36 @@
             </div>
         </center>
     </div>
+    <br><br><br><br><br><br><br>
+    <!-- Footer-->
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Save Money</h5>
+                    <p class="grey-text text-lighten-4">“ A única maneira de fazer um excelente trabalho é amar o que
+                        você faz. Se ainda não encontrou, continue procurando. ” - Steve Jobs</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <ul>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="index.php">Início</a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="contato.html">Contato</a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="termosDeUso.html">Termos de uso</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="center container">
+                Save Money © 2019
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
