Termos de uso concertado

--- a/TermosDeUso.html
+++ b/TermosDeUso.html
@@ -46,15 +46,15 @@
         <p>Todas as informações pessoais relativas a membros, clientes ou visitantes que usem o Save Money
             serão tratadas em concordância com a Lei da Proteção de Dados Pessoais de 26 de outubro de 1998 (Lei n.º
             67/98).</p>
-        <p>A informação pessoal recolhida pode incluir o seu <em>nome, e-mail, e/ou outros.</em></p>
-        <p>O uso do Save Money pressupõe a aceitação deste Acordo de privacidade. A equipa do Save Money reserva-se ao
-            direito de alterar este acordo sem aviso prévio. Deste modo, recomendamos que consulte a nossa política de
-            privacidade com regularidade de forma a estar sempre atualizado.</p>
+        <p>A informação pessoal recolhida pode incluir o seu <em>nome, e-mail, receitas, despesas, média de gasto e etc.</em></p>
+        <p>O uso do Save Money pressupõe a aceitação deste Acordo de privacidade. A equipe do Save Money reserva-se ao
+            direito de alterar este acordo sem aviso prévio.<strong> Deste modo, recomendamos que consulte a nossa política de
+            privacidade com regularidade de forma a estar sempre atualizado.</strong></p>
         <h3 class="center">Os anúncios</h3>
         <p>Tal como outros websites, coletamos e utilizamos informação contida nos anúncios. A informação contida nos
             anúncios, inclui o seu endereço IP (Internet Protocol), o seu ISP (Internet Service Provider, como o Sapo,
-            Clix, ou outro), o browser que utilizou ao visitar o nosso website (como o Internet Explorer ou o Firefox),
-            o tempo da sua visita e que páginas visitou dentro do nosso website.</p>
+            Clix, ou outro), o browser que utilizou ao visitar o nosso website (como o Google ou o Firefox),
+            o tempo da sua visita e que páginas visitou dentro do Save Money.</p>
         <p>A frequencia e quantidade de anúncios será sempre reduzidas ao menor número possivel, para transformar sua
             experiência com a ferramenta muito mais dinâmica e leve.
         </p>
@@ -65,18 +65,17 @@
         <p>Em adição também utilizamos publicidade de terceiros no nosso website para suportar os custos de manutenção.
             Alguns destes publicitários, poderão utilizar tecnologias como os cookies e/ou web beacons quando publicitam
             no nosso website, o que fará com que esses publicitários (como o Google através do Google AdSense) também
-            recebam a sua informação pessoal, como o endereço IP, o seu ISP, o seu browser, etc. Esta função é
+            recebam a sua informação pessoal, como o endereço IP, o seu ISP, o seu browser. Esta função é
             geralmente utilizada para geotargeting (mostrar publicidade de Lisboa apenas aos leitores oriundos de Lisboa
-            por ex.) ou apresentar publicidade direcionada a um tipo de utilizador (como mostrar publicidade de
-            restaurante a um utilizador que visita sites de culinária regularmente, por ex.).</p>
-        <p>Você detém o poder de desligar os seus cookies, nas opções do seu browser, ou efetuando alterações nas
-            ferramentas de programas Anti-Virus, como o Norton Internet Security. No entanto, isso poderá alterar a
+            por exemplo) ou apresentar publicidade direcionada a um tipo de utilizador (como mostrar publicidade de
+            restaurante a um utilizador que visita sites de culinária regularmente por exemplo.).</p>
+        <p>Você detém o poder de desligar os seus cookies nas opções do seu browser, no entanto isso poderá alterar a
             forma como interage com o nosso website, ou outros websites. Isso poderá afetar ou não permitir que faça
-            logins em programas, sites ou fóruns da nossa e de outras redes.</p>
+            logins em programas, sites ou determinadas funcionalidades.</p>
         <h3 class="center">Ligações a Sites de terceiros</h3>
-        <p>O Save Money possui ligações para outros sites, os quais, a nosso ver, podem conter informações / ferramentas
+        <p>O Save Money possui ligações para outros sites, os quais a nosso ver podem conter informações / ferramentas
             úteis para os nossos visitantes. A nossa política de privacidade não é aplicada a sites de terceiros, pelo
-            que, caso visite outro site a partir do nosso deverá ler a politica de privacidade do mesmo.</p>
+            que caso visite outro site a partir do nosso deverá ler a politica de privacidade do mesmo.</p>
         <p><strong>Não nos responsabilizamos pela política de privacidade ou conteúdo presente nesses mesmos
                 sites.</strong></p>
     </div>
