--- a/TermosDeUso.html
+++ b/TermosDeUso.html
@@ -39,6 +39,7 @@
     <!--Termos de Uso-->
     <div class="container">
         <h3 class="center">Política de privacidade para <strong>Save Money</strong></h3>
+        <h5>Save Money é um projeto para fins didáticos e de aprendizagem, todo o código fonte está disponibilizado no Git Hub.</h5>
         <p>Todas as suas informações pessoais recolhidas, serão usadas para o ajudar a tornar a sua visita no nosso site
             o mais produtiva e agradável possível.</p>
         <p>A garantia da confidencialidade dos dados pessoais dos utilizadores do nosso site é importante para o Save
